# mcp-prompts-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-and-publish-crate.yml  ci.yml  release.yml
docs/: index.md
src/: lib.rs  main.rs  storage.rs
src/models/: mod.rs  prompt.rs
src/storage/: .postgres.rs.swp  filesystem.rs  mod.rs  postgres.rs
