[package]
name = "mcp_native_service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
binder = { version = "0.1.6", features = ["async_api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# In a real project, we would also have a dependency on the mcp_core logic crate, e.g.:
# mcp_core = { path = "../mcp_core" }

[build-dependencies]
# This would be used to generate the Rust code from AIDL if not using the AOSP build system
# rsbinder-aidl = "0.6" 